cancel model status on paper-dialog

--- a/editable-text.html
+++ b/editable-text.html
@@ -32,7 +32,7 @@ Example:
       }
     </style>
     <paper-icon-button on-click="iconbuttonClicked" icon="create"></paper-icon-button>
-    <paper-dialog id="modal" modal>
+    <paper-dialog id="modal">
       <h2>{{dialogTitle}}</h2>
       <paper-input></paper-input>
       <div class="buttons">
