fix update value bug

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,7 +18,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </head>
   <body>
   <template is="dom-bind">
-    <editable-text dialog-title="Test Title" data="{{titleval}}" path="test"></editable-text><span>{{titleval}}</span>
+    <editable-text dialog-title="Test Title" data="{{titleval}}" path="homepagename"></editable-text><span>{{titleval}}</span>
   </template>
   </body>
 </html>
