change default display to none

--- a/editable-text.html
+++ b/editable-text.html
@@ -27,6 +27,9 @@ Example:
 <dom-module id="editable-text">
   <template>
     <style>
+      :host{
+        display: none;
+      }
       paper-button{
         padding: 5px;
       }
